refactor popup: swap download status to busy, rearrange some code

--- a/src/popup/actions.html
+++ b/src/popup/actions.html
@@ -18,24 +18,27 @@
 
 
 <!-- SLIDING PAGES -->
-        <div class="slider" id="slider"><div class="slider-holder">
+        <div id="slider" class="slider"><div class="slider-holder">
 
         <!-- MAIN PAGE -->
-            <div class="slider-page active" id="main">
+            <div id="main" class="slider-page active">
                 <div class="grouped">
-                    <input type="text" id="input-vin" class="input-big" size="17" placeholder="VIN"><br>
-                    <div id= "button-search" class="button disabled" data-style-orig="button">Search</div>
+                    <input id="search-input" type="text" class="input-big" size="17" placeholder="VIN">
+                    <div id="search-button" class="button disabled" data-style-orig="button">Search</div>
                 </div>
-                <div id="button-download" data-style-orig="button ungrouped" class="button ungrouped disabled">Download Images</div>
+                <div class="grouped">
+                    <input id="download-input" type="text" class="input-big" size="17" placeholder="LOT# OR STOCK#"><br>
+                    <div id="download-button" class="button disabled" data-style-orig="button">Download Images</div>
+                </div>
             </div>
 
         <!-- SETTINGS PAGE -->
-            <div class="slider-page" id="settings">
+            <div id="settings" class="slider-page">
                 <div class="settings-grid grouped">
                     <div class="settings-title">Salvage search:</div>
 
                     <div class="toggle-cover"><div class="toggle">
-                        <input type="checkbox" class="checkbox" id="copart">
+                        <input id="copart" type="checkbox" class="checkbox">
                         <div class="knobs">
                             <span></span>
                         </div>
@@ -44,7 +47,7 @@
                     <div class="settings-label">Copart.com</div>
 
                     <div class="toggle-cover"><div class="toggle">
-                        <input type="checkbox" class="checkbox" id="iaai">
+                        <input id="iaai" type="checkbox" class="checkbox">
                         <div class="knobs">
                             <span></span>
                         </div>
@@ -53,7 +56,7 @@
                     <div class="settings-label">IAAI.com</div>
 
                     <div class="toggle-cover"><div class="toggle">
-                        <input type="checkbox" class="checkbox" id="row52">
+                        <input id="row52" type="checkbox" class="checkbox">
                         <div class="knobs">
                             <span></span>
                         </div>
@@ -62,7 +65,7 @@
                     <div class="settings-label">Row52.com</div>
 
                     <div class="toggle-cover"><div class="toggle">
-                        <input type="checkbox" class="checkbox" id="poctra">
+                        <input id="poctra" type="checkbox" class="checkbox">
                         <div class="knobs">
                             <span></span>
                         </div>
@@ -71,7 +74,7 @@
                     <div class="settings-label">Poctra.com</div>
 
                     <div class="toggle-cover"><div class="toggle">
-                        <input type="checkbox" class="checkbox" id="bidfax">
+                        <input id="bidfax" type="checkbox" class="checkbox">
                         <div class="knobs">
                             <span></span>
                         </div>
@@ -106,7 +109,7 @@
                     </span> -->
 
                 </div>
-                <p class="tiny ungrouped" id="version">vX.X</p>
+                <p id="version" class="tiny ungrouped">vX.X</p>
             </div>
 
 <!-- END SLIDING PAGES -->
