Update id names... again...

--- a/src/popup/actions.html
+++ b/src/popup/actions.html
@@ -23,13 +23,10 @@
         <!-- MAIN PAGE -->
             <div id="main" class="slider-page active">
                 <div class="grouped">
-                    <input id="search-input" type="text" class="input-big" size="17" placeholder="VIN">
+                    <input id="search-input" type="text" class="input-big" size="17" placeholder="VIN OR LOT">
                     <div id="search-button" class="button disabled" data-style-orig="button">Search</div>
                 </div>
-                <div class="grouped">
-                    <input id="download-input" type="text" class="input-big" size="17" placeholder="LOT# OR STOCK#"><br>
-                    <div id="download-button" class="button disabled" data-style-orig="button">Download Images</div>
-                </div>
+                <div id="download-button" class="button ungrouped disabled" data-style-orig="button ungrouped">Download Images</div>
             </div>
 
         <!-- SETTINGS PAGE -->
