--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <a href="https://benetherington.com/salvage-search/releases/salvage_search-2.3-fx.xpi">Firefox v2.3</a>
       </li>
       <li>
-        <a href="https://benetherington.com/salvage-search/releases/salvage_search-2.3.1b-fx.zip">Firefox v2.3.1 hotfix beta</a> <i>(11/11/21) For advanced users. <a href="https://extensionworkshop.com/documentation/develop/temporary-installation-in-firefox/">How to install.</a></i>
+        <a href="https://benetherington.com/salvage-search/releases/salvage_search-2.3.2rc-fx.zip">Firefox v2.3.2 release candidate</a> <i>(11/29/21) For advanced users. <a href="https://extensionworkshop.com/documentation/develop/temporary-installation-in-firefox/">How to install.</a></i>
       </li>
     </ul>
     <strong>CHROME</strong>
