--- a/src/panorama/composer.html
+++ b/src/panorama/composer.html
@@ -11,8 +11,8 @@
     <body>
 
         <!-- Main viewer and buttons -->
-        <div id="active" class="grouped has-sidebar-right">
-            <div id="pano-active"></div>
+        <div class="grouped has-sidebar-right">
+            <div id="stage"></div>
             <div class="grouped vertical toolbar">
                 <button>Button 1</button>
                 <button>Button 3</button>
