Add toolbar functionality

--- a/src/panorama/composer.html
+++ b/src/panorama/composer.html
@@ -14,12 +14,14 @@
         <div class="grouped has-sidebar-right">
             <div id="stage"></div>
             <div class="grouped vertical toolbar">
-                <button>Button 1</button>
-                <button>Button 3</button>
-                <button>Button 3</button>
+                <button id="dl-this">Download This</button>
+                <button id="dl-all">Download All</button>
                 <hr>
-                <button>Button 4</button>
-                <button>Button 5</button>
+                <button id="rst-this">Reset This</button>
+                <button id="rst-all">Reset All</button>
+                <hr>
+                <button id="add-view">Add view</button>
+                <button id="remove-view">Remove this</button>
             </div>
         </div>
         
