--- a/src/walkaround/composer.html
+++ b/src/walkaround/composer.html
@@ -2,7 +2,8 @@
 <html>
 
     <head>
-        <meta charset="utf-8">
+        <meta content="text/html;charset=utf-8" http-equiv="Content-Type">
+        <meta content="utf-8" http-equiv="encoding">
         <link rel="stylesheet" href="composer.css"/>
         <script src="../shared-assets.js"></script>
         <script src="../walkaround/viewer.js"></script>
