--- a/index.html
+++ b/index.html
@@ -17,14 +17,24 @@
         <a href="https://benetherington.com/salvage-search/releases/salvage_search-2.3-fx.xpi">Firefox v2.3</a>
       </li>
       <li>
-        <a href="https://benetherington.com/salvage-search/releases/salvage_search-2.3.2rc-fx.zip">Firefox v2.3.2 release candidate</a> <i>(11/29/21) For advanced users. <a href="https://extensionworkshop.com/documentation/develop/temporary-installation-in-firefox/">How to install.</a></i>
+        <a href="https://benetherington.com/salvage-search/releases/salvage_search-2.3.3-fx.zip">Firefox v2.3.3</a> <i>(2/28/22) For advanced users. <a href="https://extensionworkshop.com/documentation/develop/temporary-installation-in-firefox/">How to install.</a></i>
       </li>
+      <ul>
+        <li>Includes IAAI search hotfix.</li>
+        <li>Adds panorama/walkaround raw image downloads to IAAI.</li>
+        <li>2.3.3 should be published as an installable version soon, and is the last expected update until version 3.</li>
+      </ul>
     </ul>
     <strong>CHROME</strong>
     <ul>
       <li>
         <a href="https://chrome.google.com/webstore/detail/salvage-search/okbjgjdpehblohdlmocliddhkhpkikoh?hl=en&authuser=0">Chrome, latest stable version</a>
       </li>
+      <ul>
+        <li>
+          Chrome will not be updated until version 3, which will include a large stability update, as well as a panorama editor/viewer. It is several minor versions behind the Firefox extension.
+        </li>
+      </ul>
     </ul>
     <br><br>
 
