--- a/index.html
+++ b/index.html
@@ -14,15 +14,12 @@
     <strong>FIREFOX</strong>
     <ul>
       <li>
-        <a href="https://benetherington.com/salvage-search/releases/salvage_search-2.3-fx.xpi">Firefox v2.3</a>
-      </li>
-      <li>
-        <a href="https://benetherington.com/salvage-search/releases/salvage_search-2.3.3-fx.zip">Firefox v2.3.3</a> <i>(2/28/22) For advanced users. <a href="https://extensionworkshop.com/documentation/develop/temporary-installation-in-firefox/">How to install.</a></i>
+        <a href="https://benetherington.com/salvage-search/releases/salvage_search-2.3.3-fx.xpi">Firefox v2.3.3</a>
       </li>
       <ul>
         <li>Includes IAAI search hotfix.</li>
         <li>Adds panorama/walkaround raw image downloads to IAAI.</li>
-        <li>2.3.3 should be published as an installable version soon, and is the last expected update until version 3.</li>
+        <li>Last expected update until version 3.</li>
       </ul>
     </ul>
     <strong>CHROME</strong>
