Add salvageName radio logic to popup

--- a/src/popup/actions.html
+++ b/src/popup/actions.html
@@ -26,9 +26,9 @@
                 <div class="grouped">
                     <input id="search-input" type="text" class="input-big" size="17" placeholder="VIN OR LOT">
                     
-                    <div class="radio-wrapper">
+                    <div id="salvage-selector">
                         <div class="slide-radio">
-                            <input id="unknown-salvage" type="radio" class="toggle-option" name="salvage-name">
+                            <input id="unknown-salvage" type="radio" class="toggle-option" name="salvage-name" checked>
                             <label for="unknown-salvage">Unknown</label>
                             
                             <input id="copart" type="radio" class="toggle-option" name="salvage-name">
