make stage style responsive, nearly kill self so doing

--- a/src/panorama/composer.html
+++ b/src/panorama/composer.html
@@ -11,17 +11,18 @@
     </head>
     <body>
 
-        <!-- Main viewer and buttons -->
-        <div class="ungrouped has-hover">
-            <pano-container id="stage"></pano-container>
-            <button id="save-view" class="hover bottom right"></button>
-        </div>
-        
-        <!-- Thumbnails -->
-        <div id="thumbs" class="grouped has-hover horizontal">
-            <button id="dl-all" class="hover bottom right"></button>
-            <p class="placeholder">Click the camera button to add a snapshot...</p>
-        </div>
+            <!-- Main viewer and buttons -->
+            <div id="stage-container" class="ungrouped has-hover">
+                <pano-container id="stage"></pano-container>
+                <button id="save-view" class="hover bottom right"></button>
+            </div>
+            
+            <!-- Thumbnails -->
+            <div id="thumbs" class="grouped has-hover horizontal">
+                <button id="dl-all" class="hover bottom right"></button>
+                <p class="placeholder">Click the camera button to add a snapshot...</p>
+            </div>
+
     </body>
 </html>
 
