--- a/src/panorama/composer.html
+++ b/src/panorama/composer.html
@@ -6,8 +6,8 @@
         <meta content="utf-8" http-equiv="encoding">
         <link rel="stylesheet" href="composer.css"/>
         <script src="../shared-assets.js"></script>
-        <script src="../panorama/viewer.js"></script>
-        <script src="../panorama/composer.js"></script>
+        <script src="viewer.js"></script>
+        <script src="composer.js"></script>
     </head>
     <body>
 
@@ -18,7 +18,7 @@
             </div>
             
             <!-- Thumbnails -->
-            <div id="thumbs" class="grouped has-hover horizontal">
+            <div id="thumbs" class="grouped has-hover">
                 <button id="dl-all" class="hover bottom right"></button>
                 <p class="placeholder">Click the camera button to add a snapshot...</p>
             </div>
