--- a/src/walkaround/composer.html
+++ b/src/walkaround/composer.html
@@ -6,20 +6,19 @@
         <meta content="utf-8" http-equiv="encoding">
         <link rel="stylesheet" href="composer.css"/>
         <script src="../shared-assets.js"></script>
-        <script src="../walkaround/viewer.js"></script>
-        <script src="../walkaround/composer.js"></script>
+        <script src="viewer.js"></script>
+        <script src="composer.js"></script>
     </head>
     <body>
 
         <!-- Main viewer and buttons -->
-        <div class="ungrouped has-hover">
+        <div id="stage-container" class="ungrouped has-hover">
             <walkaround-viewer id="stage"></walkaround-viewer>
             <button id="save-view" class="hover bottom right"></button>
         </div>
-        </div> 
         
         <!-- Thumbnails -->
-        <div id="thumbs" class="grouped has-hover horizontal">
+        <div id="thumbs" class="grouped has-hover">
             <button id="dl-all" class="hover bottom right"></button>
             <p class="placeholder">Click the camera button to add a snapshot...</p>
         </div>
