Pull GLSL code out into another file

--- a/src/panorama/composer.html
+++ b/src/panorama/composer.html
@@ -6,6 +6,7 @@
         <meta content="utf-8" http-equiv="encoding">
         <link rel="stylesheet" href="composer.css"/>
         <script src="../shared-assets.js"></script>
+        <script src="viewer-helpers.js"></script>
         <script src="viewer.js"></script>
         <script src="composer.js"></script>
     </head>
