Update walk/pano popup style and content

--- a/src/walkaround/composer.html
+++ b/src/walkaround/composer.html
@@ -27,9 +27,9 @@
         <!-- Help popup -->
         <div id="help-popup" class="fade-out">
             <h3>Controls</h3>
-            <p><b>Rotate the vehicle:</b> Click-and-drag on the vehicle, or press left and right arrow keys. Hold Shift to rotate faster.</p>
-            <p><b>Hold on to an image:</b> Click the camera button, or press Enter, or double click on the vehicle.</p>
-            <p><b>Download held images:</b> Click the download button. Images will be saved to your downloads folder, inside this vehicle's folder.</p>
+            <p><b>Rotate the vehicle:</b> <em>Click-and-drag</em> on the vehicle, or press <em>left and right arrow keys</em>. Hold <em>Shift</em> to rotate faster.</p>
+            <p><b>Hold on to an image:</b> Click the <em>camera button</em>, or press <em>Enter</em>, or <em>double click</em> on the vehicle.</p>
+            <p><b>Download held images:</b> Click the <em>download button</em>. Images will be saved to your downloads folder, inside this vehicle's folder.</p>
         </div>
 
     </body>
