--- a/src/panorama/composer.html
+++ b/src/panorama/composer.html
@@ -28,10 +28,10 @@
         <!-- Help popup -->
         <div id="help-popup" class="fade-out">
             <h3>Controls</h3>
-            <p><b>Rotate the camera:</b> Click-and-drag, or press the arrow keys to make big jumps, or press the arrow keys while holding Shift to make smaller jumps.</p>
-            <p><b>Zoom:</b> use the scroll wheel, or click-and-drag while holding CTRL. Hold Shift to zoom faster.</p>
-            <p><b>Hold on to an image:</b> Click the camera button, or press Enter, or double click on the vehicle.</p>
-            <p><b>Download held images:</b> Click the download button. Images will be saved to your downloads folder, inside this vehicle's folder.</p>
+            <p><b>Rotate the camera:</b> <em>Click-and-drag</em>, or press the <em>arrow keys</em> to make big jumps. You can also hold <em>Shift</em> to make smaller jumps.</p>
+            <p><b>Zoom:</b> use the <em>scroll wheel</em>. You can also <em>CTRL</em> and either <em>drag up and down</em>, or use the <em>up and down arrow keys</em>. Hold <em>Shift</em> to zoom faster.</p>
+            <p><b>Hold on to an image:</b> Click the <em>camera button</em>, or press <em>Enter</em>, or <em>double click</em> on the vehicle.</p>
+            <p><b>Download held images:</b> Click the <em>download button</em>. Images will be saved to your downloads folder, inside this vehicle's folder.</p>
         </div>
 
     </body>
