Rename #thumbs-container to #thumbs-wrapper because it's a bit ambiguous with .thumb-container

--- a/src/panorama/composer.html
+++ b/src/panorama/composer.html
@@ -24,7 +24,7 @@
         </div>
         
         <!-- Thumbnails -->
-        <div id="thumbs-container" class="has-hover">
+        <div id="thumbs-wrapper" class="has-hover">
             <div class="hover bottom right">
                 <button id="dl-all"></button>
             </div>
