--- a/index.html
+++ b/index.html
@@ -14,15 +14,7 @@
     <strong>FIREFOX</strong>
     <ul>
       <li>
-        <a href="https://benetherington.com/salvage-search/releases/salvage_search-2.3.3-fx.xpi">Firefox v2.3.3</a>
-        <ul>
-          <li>Includes IAAI search hotfix.</li>
-          <li>Adds panorama/walkaround raw image downloads to IAAI.</li>
-          <li>2.3.3 should be published as an installable version soon, and is the last expected update until version 3.</li>
-        </ul>
-      </li>
-      <li>
-        <a href="https://benetherington.com/salvage-search/releases/salvage_search-3.0.2-fx.zip">Firefox v3.0.2</a> <i>(4/12/22) For advanced users. <a href="https://extensionworkshop.com/documentation/develop/temporary-installation-in-firefox/">How to install.</a></i>
+        <a href="https://benetherington.com/salvage-search/releases/salvage_search-3.0.2-fx.zip">Firefox v3.0.2</a>
         <ul>
           <li>A major update! Most of the work is in reorganization and stability improvements.</li>
           <li>
