Fix polyfill "import"

--- a/src/panorama/composer.html
+++ b/src/panorama/composer.html
@@ -5,7 +5,7 @@
         <meta content="text/html;charset=utf-8" http-equiv="Content-Type">
         <meta content="utf-8" http-equiv="encoding">
         <link rel="stylesheet" href="composer.css"/>
-        <script src="../shared-assets.js"></script>
+        <script src="../browser-polyfill.js"></script>
         <script src="viewer-helpers.js"></script>
         <script src="viewer.js"></script>
         <script src="composer.js"></script>
