Fix link on index

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <strong>FIREFOX</strong>
     <ul>
       <li>
-        <a href="https://benetherington.com/salvage-search/releases/salvage_search-3.0.2-fx.zip">Firefox v3.0.2</a>
+        <a href="https://benetherington.com/salvage-search/releases/salvage_search-3.0.3-fx.xpi">Firefox v3.0.3</a>
         <ul>
           <li>A major update! Most of the work is in reorganization and stability improvements.</li>
           <li>
