Add statvin to popup settings page

--- a/src/popup/actions.html
+++ b/src/popup/actions.html
@@ -147,6 +147,20 @@
                             </div>
                         </div>
                         <div class="settings-label">BidFax.info</div>
+                        
+                        <div class="toggle-cover">
+                            <div class="toggle">
+                                <input
+                                    id="settings-statvin"
+                                    type="checkbox"
+                                    class="checkbox" />
+                                <div class="knobs">
+                                    <span></span>
+                                </div>
+                                <div class="layer"></div>
+                            </div>
+                        </div>
+                        <div class="settings-label">Stat.vin</div>
 
                         <!-- <input type="text" id="zip" class="input-small" size="5" maxlength="5">
                     <div class="settings-label">ZIP for fallback searches</div>
