--- a/src/panorama/composer.html
+++ b/src/panorama/composer.html
@@ -27,7 +27,9 @@
                 <button id="dl-all"></button>
             </div>
             <div id="thumbs" class="card">
-                <p class="placeholder">Click the camera button to add a snapshot...</p>
+                <p class="placeholder">
+                    Click the camera button to add a snapshot...
+                </p>
             </div>
         </div>
 
