--- a/src/walkaround/composer.html
+++ b/src/walkaround/composer.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <meta content="text/html;charset=utf-8" http-equiv="Content-Type">
-        <meta content="utf-8" http-equiv="encoding">
-        <link rel="stylesheet" href="composer.css"/>
+        <meta content="text/html;charset=utf-8" http-equiv="Content-Type" />
+        <meta content="utf-8" http-equiv="encoding" />
+        <link rel="stylesheet" href="composer.css" />
         <script src="../browser-polyfill.js"></script>
         <script src="viewer.js"></script>
         <script src="composer.js"></script>
