Add link to 3.1.0 pre-release

--- a/index.html
+++ b/index.html
@@ -60,6 +60,22 @@
                     </li>
                 </ul>
             </li>
+            <li>
+                <a
+                    href="https://benetherington.com/salvage-search/releases/salvage_search-3.1.0-fx.zip">
+                    Firefox v3.1.0</a
+                >
+                <i>
+                    (3/26/22) For advanced users.
+                    <a
+                        href="https://extensionworkshop.com/documentation/develop/temporary-installation-in-firefox/">
+                        How to install.
+                    </a>
+                </i>
+                <ul>
+                    <li>Adds support for Stat.vin.</li>
+                </ul>
+            </li>
         </ul>
         <strong>CHROME</strong>
         <ul>
