Add high-vis click instruction

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             <li>
                 <a
                     href="https://benetherington.com/salvage-search/releases/salvage_search-3.0.3-fx.xpi">
-                    Firefox v3.0.3
+                    Firefox v3.0.3 -- CLICK TO INSTALL
                 </a>
                 <ul>
                     <li>
