Start work on pano file "upload"

--- a/src/panorama/composer.html
+++ b/src/panorama/composer.html
@@ -57,5 +57,10 @@
                 vehicle's folder.
             </p>
         </div>
+        
+        <div>
+            <input id="pano-files" type="file" multiple>
+            <button id="pano-files-load">
+        </div>
     </body>
 </html>
