--- a/src/walkaround/composer.html
+++ b/src/walkaround/composer.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <meta content="text/html;charset=utf-8" http-equiv="Content-Type" />
-        <meta content="utf-8" http-equiv="encoding" />
-        <link rel="stylesheet" href="composer.css" />
+        <meta content="text/html;charset=utf-8" http-equiv="Content-Type"/>
+        <meta content="utf-8" http-equiv="encoding"/>
+        <link rel="stylesheet" href="composer.css"/>
         <script src="../browser-polyfill.js"></script>
         <script src="viewer.js"></script>
         <script src="composer.js"></script>
@@ -36,7 +36,8 @@
         <div id="help-popup" class="fade-out">
             <h3>Controls</h3>
             <p>
-                <b>Rotate the vehicle:</b> <em>Click-and-drag</em> on the
+                <b>Rotate the vehicle:</b>
+                <em>Click-and-drag</em> on the
                 vehicle, or press <em>left and right arrow keys</em>. Hold
                 <em>Shift</em> to rotate faster.
             </p>
@@ -50,5 +51,8 @@
                 vehicle's folder.
             </p>
         </div>
-    </body>
-</html>
+        <div>
+            <input id="pano-files" type="file" multiple>
+            <button id="pano-files-load"></div>
+        </body>
+    </html>
