Fix Copart high-res downloads, publish version 3.1.2

--- a/index.html
+++ b/index.html
@@ -18,18 +18,11 @@
         <ul>
             <li>
                 <a
-                    href="https://benetherington.com/salvage-search/releases/salvage_search-3.0.3-fx.xpi">
-                    Firefox v3.0.3
+                    href="https://benetherington.com/salvage-search/releases/salvage_search-3.1.2-fx.xpi">
+                    Firefox v3.1.2
                 </a>
                 <ul>
-                    <li>Adds support for Stat.vin.</li>
-                    <li>
-                        Bugfix: some IAAI listings would not trigger 360 popups.
-                    </li>
-                    <li>
-                        Interior 360 now lets you drag outside the window while
-                        panning.
-                    </li>
+                    <li>Updates Copart image downloading after they changed their API.</li>
                 </ul>
             </li>
             <!-- <li>
@@ -56,15 +49,15 @@
                     href="https://chrome.google.com/webstore/detail/salvage-search/okbjgjdpehblohdlmocliddhkhpkikoh">
                     Chrome v3.1.1
                 </a>
-            </li>
-            <ul>
-                <li>
-                    See release notes above. Chrome versions are submitted at
-                    the same time as Firefox, but take longer to be approved.
-                    The Chrome webstore may have a slightly older version, but
-                    it will auto-update as needed.
+                <ul>
+                    <li>
+                    At the moment, Chrome plugins won't work due to a highly
+                    disputed policy decision from Google. In the future, we'll
+                    make updates to get Chrome plugins working again, but for
+                    the moment, you're stuck with Firefox.
                 </li>
-            </ul>
+                </ul>
+            </li>
         </ul>
         <br /><br />
 
@@ -221,9 +214,10 @@
         <br /><br /><br /><br />
         <hr />
         <p>
-            <a href="https://www.github.com/benetherington/salvage-search"
-                >Source code and licensing</a
-            >
+            <a
+                href="https://www.github.com/benetherington/salvage-search">
+                Source code and licensing
+            </a>
         </p>
     </body>
 </html>
