--- a/src/panorama/composer.html
+++ b/src/panorama/composer.html
@@ -37,7 +37,8 @@
         <div id="help-popup" class="fade-out">
             <h3>Controls</h3>
             <p>
-                <b>Rotate the camera:</b> <em>Click-and-drag</em>, or press the
+                <b>Rotate the camera:</b>
+                <em>Click-and-drag</em>, or press the
                 <em>arrow keys</em> to make big jumps. You can also hold
                 <em>Shift</em> to make smaller jumps.
             </p>
